Fix padding and footer
Fixed the padding on the 'some random information' section, so that
when the page is minimized vertically it doesn't overlap with the top
and bottom sections like it was doing.
Made it so the footer has a min-height, that way it does not get to
content height, which it was doing.

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ header {
     flex-direction: column;
     align-items: center;
     gap: 30px;
+    padding: 20px;
 }
 
 .main h2 {
@@ -256,6 +257,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 60px;
+    min-height: 40px;
     color: #E5E7EB;
     font-size: 14px;
     background-color: #1F2937;
